ci: update PR actions to test questing and runs-on to ubuntu-latest (#6753)
Plucky is now EOL and no longer has active daily deb package builds.

To reduce workflow maintenance, only pin workflows to an LTS
if workflows exhibit repeated failures due to ubuntu-latest.

--- a/.github/workflows/ci-integration.yml
+++ b/.github/workflows/ci-integration.yml
@@ -19,11 +19,11 @@ defaults:
     shell: sh -ex {0}
 
 env:
-  RELEASE: plucky
+  RELEASE: questing
 
 jobs:
   build-package-and-run-tests:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
