--- a/.github/workflows/_integration_common.yml
+++ b/.github/workflows/_integration_common.yml
@@ -29,6 +29,9 @@ on:
       filter_tests:
         required: false
         type: string
+      hosted_runner:
+        required: false
+        type: boolean
   workflow_call:
     inputs:
       release:
@@ -46,10 +49,13 @@ on:
       filter_tests:
         required: false
         type: string
+      hosted_runner:
+        required: false
+        type: boolean
 
 jobs:
   lxc:
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.hosted_runner && fromJSON('["self-hosted", "linux", "amd64", "tiobe", "noble"]') || 'ubuntu-latest' }}
 
     env:
       CLOUD_INIT_PLATFORM: ${{ inputs.platform || 'lxd_container' }}
